Disable creation of a preview for images with transparency until a solution involving a better file format is available.

BUG: 286127