libs/dimg/dimg.cpp
@@ -2940,8 +2940,13 @@ void DImg::prepareMetadataToSave(const QString& intendedDestPath, const QString&
 
     bool createNewPreview = false;
     QSize previewSize;
+    bool skipPreviewCreation = false;
 
-    if (flags & CreateNewMetadataPreview)
+    // Refuse preview creation for images with transparency
+    // as long as we have no format to support this. See bug 286127
+    skipPreviewCreation = hasTransparentPixels();
+
+    if (flags & CreateNewMetadataPreview && !skipPreviewCreation)
     {
         const QSize standardPreviewSize(1280, 1280);
         previewSize = size();
